tests/conformance/errors/import_module_stack/helpers.dgm
def boom() {
  throw "module err"
}

boom()
